[tool.poetry]
name = "service_dataops_utility"
version = "0.3.0"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "^3.7"
common = { git = "https://github.com/vre-charite-autodeploy/service_common.git", branch="main" }
logger = "0.1.0"
aioredis = "2.0.1"
certifi = "2021.10.8"
chardet = "3.0.4"
click = "7.1.2"
fastapi = "0.62.0"
FastAPI-SQLAlchemy = "0.2.1"
fastapi-utils = "0.2.1"
greenlet = "1.1.2"
gunicorn = "20.0.4"
h11 = "0.12.0"
httptools = "0.1.1"
idna = "2.10"
importlib-metadata = "4.8.2"
opentelemetry-exporter-jaeger = "1.6.2"
opentelemetry-instrumentation = "0.26b1"
opentelemetry-instrumentation-fastapi = "0.26b1"
opentelemetry-instrumentation-logging = "0.26b1"
opentelemetry-instrumentation-requests = "0.26b1"
psycopg2-binary = "2.9.3"
pydantic = "1.8.2"
python-dotenv = "0.19.1"
python-json-logger = "0.1.11"
python-multipart = "0.0.5"
redis = "3.5.3"
requests = "2.24.0"
six = "1.16.0"
SQLAlchemy = "1.4.27"
starlette = "0.13.6"
typing_extensions = "4.0.0"
urllib3 = "1.25.11"
uvicorn = "0.17.4"
uvloop = "0.14.0"
zipp = "3.6.0"
httpx = "0.21.3"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "6.1.1"
pytest-env = "0.6.2"
pytest-cov = "2.12.1"
pytest-asyncio = "0.18.1"
fakeredis = "1.7.1"
faker = "12.3.3"
httpx = "0.21.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
